# Nirnai

./: .gitignore
.github/workflows/: deploy.yml
Nirnai extension/: NIRNAI_PROVISIONAL_PATENT.md  NIRNAI_V1_PRODUCT_DOCUMENT.md  README.md  RECENT_CHANGES.md  ai_shopping_health_copilot_prd.md  build.mjs  manifest.json  nirnai_cross_platform_strategy.md  nirnai_engineering_ready_spec.md  nirnai_provisional_patent_filing_package.md  nirnai_time_aware_prd.md  nirnai_travel_strategy.md  nirnai_ui_design_blueprint.md  package-lock.json  package.json  technical_implementation_blueprint_ai_shopping_health_copilot.md  tsconfig.json
Nirnai extension/backend/: Dockerfile  ai_service.py  canonical_id.py  decision_engine.py  domain_classifier.py  health_scoring.py  hospitality_scorer.py  india_pricing.py  india_retail_scorer.py  main.py  models.py  off_client.py  product_cache.py  purchase_scoring.py  requirements.txt  retail_scorer.py  test_canonical_id.py  test_gates.py  test_india_pricing.py  test_india_retail_scorer.py  test_pipeline.py  test_product_cache.py  test_recheck.py  whatsapp_bot.py
Nirnai extension/src/: types.ts
Nirnai extension/src/background/: service-worker.ts
Nirnai extension/src/content/: content.ts
Nirnai extension/src/popup/: popup.css  popup.html  popup.ts
rust/: Dockerfile
rust/.claw/sessions/: session-1775210525041.json  (+1 more)
rust/crates/server/: Cargo.toml
rust/crates/server/src/: clicks.rs  compare.rs  dynamo.rs  homepage.rs  intent.rs  inventory.rs  lib.rs  main.rs  nirnai.rs  pages.rs  proxy.rs  scraper.rs
scripts/: preload_inventory.py
(+39 files in other folders)
